# DynamicHD

./: .gitignore  .gitmodules  CMakeLists.txt  DynamicHDRunningInstructions.tex  LICENSE  README.md  configure  dyhdenv3.yaml  dynamic_hd_code.sublime-project  dynamic_hd_code.sublime-workspace  make_runscripts  makefile  makefile.in  meson.build  meson.options
Dynamic_HD_Cpp_Code/: .cproject  .gitignore  .project  Dynamic_HD_Cpp_Code.doxyfile  README.txt  makefile  objects.mk  sources.mk
Dynamic_HD_Cpp_Code/src/algorithms/: advanced_bifurcation_algorithm.cpp  basic_bifurcation_algorithm.cpp  basin_evaluation_algorithm.cpp  basin_post_processing_algorithm.cpp  bifurcation_algorithm.cpp  carved_river_direction_burning_algorithm.cpp  catchment_computation_algorithm.cpp  connected_lsmask_generation_algorithm.cpp  flow_accumulation_algorithm.cpp  l2_basin_evaluation_algorithm.cpp  lake_filling_algorithm.cpp  meson.build  non_coincident_grid_mapping_algorithm.cpp  non_local_river_direction_connection_algorithm.cpp  orography_creation_algorithm.cpp  reduce_connected_areas_to_points_algorithm.cpp  river_direction_determination_algorithm.cpp  river_direction_upscaling_algorithm.cpp  sink_filling_algorithm.cpp  stream_following_algorithm.cpp  water_redistribution_algorithm.cpp
Dynamic_HD_Cpp_Code/src/drivers/: accumulate_flow.cpp  bifurcate_rivers_basic.cpp  bifurcate_rivers_basic_icon_interface.cpp  bifurcate_rivers_basic_icon_simple_interface.cpp  burn_carved_rivers.cpp  compute_catchments.cpp  compute_catchments_icon_interface.cpp  compute_catchments_icon_simple_interface.cpp  create_connected_lsmask.cpp  create_merge_structure_test_data.cpp  create_orography.cpp  determine_river_directions.cpp  determine_river_directions_icon_interface.cpp  determine_river_directions_icon_simple_interface.cpp  evaluate_basins.cpp  fill_lakes.cpp  fill_sinks.cpp  filter_out_shallow_lakes.cpp  follow_streams.cpp  l2_evaluate_basins.cpp  meson.build  redistribute_water.cpp  reduce_connected_areas_to_points.cpp  sink_filling_icon_interface.cpp  sink_filling_icon_simple_interface.cpp  upscale_orography.cpp
Dynamic_HD_Cpp_Code/src/gtest/: .gitignore  meson.build  subdir.mk
Dynamic_HD_Cpp_Code/src/testing/: meson.build  test_bifurcate_rivers_basic.cpp  test_catchment_computation.cpp  test_determine_river_directions.cpp  test_disjoint_set.cpp  test_evaluate_basins.cpp  test_fill_sinks.cpp  test_grid.cpp  test_l2_evaluate_basins.cpp  test_lake_operators.cpp  test_orography_creation.cpp  test_post_process_basins.cpp
Dynamic_HD_Environmental_Settings/: dynamic_hd_env.txt
Dynamic_HD_Fortran_Code/: .cproject  .gitignore  .project  Dynamic_HD_Fortran_Code.doxyfile  README.txt  makefile  objects.mk  sources.mk  subdir.mk
Dynamic_HD_Fortran_Code/src/algorithms/: break_loops_mod.f90  cotat_plus.f90  cross_grid_mapper.f90  flow_accumulation_algorithm_mod.f90  icon_to_latlon_landsea_downscaler.f90  loop_breaker_mod.f90  map_non_coincident_grids_mod.f90  meson.build
Dynamic_HD_Fortran_Code/src/base/: check_return_code_netcdf_mod.f90  doubly_linked_list_mod.f90  meson.build  parameters_mod.f90  subfield_mod.f90
Dynamic_HD_Fortran_Code/src/lake_model/: calculate_lake_fractions_mod.f90  lake_logger_mod.f90  lake_model_array_decoder.f90  lake_model_input.f90  lake_model_interface_mod.f90  lake_model_interface_switcher_mod.f90  lake_model_mod.f90  lake_model_output.f90  lake_model_tree_mod.f90  meson.build
Dynamic_HD_Fortran_Code/src/latlon_hd_and_lake_model/: latlon_hd_model_driver.f90  latlon_hd_model_interface_mod.f90  latlon_hd_model_io_mod.f90  latlon_hd_model_mod.f90  latlon_lake_logger_mod.f90  latlon_lake_model_interface_mod.f90  latlon_lake_model_interface_switcher_mod.f90  latlon_lake_model_io_mod.f90  latlon_lake_model_lake_number_retrieval_driver.f90  latlon_lake_model_mod.f90  latlon_lake_model_retrieve_lake_numbers.f90  latlon_lake_model_tree_mod.f90  meson.build
Dynamic_HD_Fortran_Code/src/testing/: accumulate_flow_test_mod.f90  calculate_lake_fractions_test_mod.f90  flow_test_mod.f90  icosohedral_hd_model_test_mod.f90  l2_calculate_lake_fractions_test_mod.f90  l2_lake_model_array_decoder_test_mod.f90  l2_lake_model_input_test_mod.f90  l2_latlon_lake_model_test_mod.f90  lake_model_array_decoder_test_mod.f90  lake_model_input_test_mod.f90  lake_model_tree_test_mod.f90  latlon_hd_and_lake_model_test_mod.f90  latlon_hd_model_test_mod.f90  latlon_lake_model_merges_io_test_mod.f90  latlon_lake_model_test_mod.f90  latlon_lake_model_tree_test_mod.f90  loop_breaker_test_mod.f90  manual_fruit_basket.f90  manual_fruit_basket_driver.f90  map_non_coincident_grids_test_mod.f90  meson.build  subfield_test_mod.f90
Dynamic_HD_Julia_Code/: CommandLineDriver.jl  CoordsModule.jl  FieldModule.jl  GridModule.jl  HDDriverModule.jl  HDModule.jl  HDTestModule.jl  HierarchicalStateMachineModule.jl  ICONCommandLineDriver.jl  IOModule.jl  LakeModelParametersModule.jl  LakeModule.jl  MergeTypesModule.jl  SpecialDirectionCodesModule.jl  hierarchical_state_machine.jl
Dynamic_HD_Resources/: cotat_plus_standard_params.nl  dynamic_hd_production_driver.cfg  grid_0_5.txt  icon_hdpara_generation_driver.cfg  icon_rdir_creation_top_level.cfg  top_level_driver.cfg
Dynamic_HD_Ruby_Code/: cpp_parser.rb  julia_parser.rb  unit_test_converter.rb
Dynamic_HD_Scripts/: .project  .pydevproject
Dynamic_HD_Scripts/Dynamic_HD_Scripts/interface/cpp_interface/: accumulate_flow_icon_wrapper.pyx  bifurcate_rivers_basic_icon_si_wrapper.pyx  bifurcate_rivers_basic_icon_wrapper.pyx  compute_catchments_icon_si_wrapper.pyx  compute_catchments_icon_wrapper.pyx  compute_catchments_wrapper.pyx  create_connected_lsmask_wrapper.pyx  create_orography_wrapper.pyx  determine_river_directions_icon_si_wrapper.pyx  determine_river_directions_icon_wrapper.pyx  evaluate_basins_wrapper.pyx  fill_sinks_wrapper.pyx  follow_streams_wrapper.pyx  l2_evaluate_basins_wrapper.pyx  lake_operators_wrapper.pyx  meson.build  setup_fill_sinks.py  sink_filling_icon_si_wrapper.pyx  sink_filling_icon_wrapper.pyx  upscale_orography_wrapper.pyx
analysis/: plots_library.py  (+2 more)
(+565 files in other folders)
