cpp_src += files('basic_bifurcation_algorithm.cpp',
                 'basin_evaluation_algorithm.cpp',
                 'basin_post_processing_algorithm.cpp',
                 'bifurcation_algorithm.cpp',
                 'carved_river_direction_burning_algorithm.cpp',
                 'catchment_computation_algorithm.cpp',
                 'connected_lsmask_generation_algorithm.cpp',
                 'lake_filling_algorithm.cpp',
                 'orography_creation_algorithm.cpp',
                 'reduce_connected_areas_to_points_algorithm.cpp',
                 'river_direction_determination_algorithm.cpp',
                 'sink_filling_algorithm.cpp',
                 'stream_following_algorithm.cpp',
                 'water_redistribution_algorithm.cpp')
