cpp_src += files('bifurcate_rivers_basic.cpp',
                 'burn_carved_rivers.cpp',
                 'compute_catchments.cpp',
                 'create_connected_lsmask.cpp',
                 'create_orography.cpp',
                 'determine_river_directions.cpp',
                 'evaluate_basins.cpp',
                 'fill_lakes.cpp',
                 'fill_sinks.cpp',
                 'filter_out_shallow_lakes.cpp',
                 'follow_streams.cpp',
                 'redistribute_water.cpp',
                 'reduce_connected_areas_to_points.cpp',
                 'upscale_orography.cpp',
                 'bifurcate_rivers_basic_icon_interface.cpp',
                 'compute_catchments_icon_interface.cpp',
                 'determine_river_directions_icon_interface.cpp',
                 'sink_filling_icon_interface.cpp')
