#Not the right way to do this for sure... gtest should be added properly as dep
cpp_test_src += files('gtest-death-test.cc',
                      'gtest-filepath.cc',
                      'gtest-port.cc',
                      'gtest-printers.cc',
                      'gtest-test-part.cc',
                      'gtest-typed-test.cc',
                      'gtest.cc',
                      'gtest_main.cc')
