cpp_test_src += files('test_bifurcate_rivers_basic.cpp',
                      'test_catchment_computation.cpp',
                      'test_determine_river_directions.cpp',
                      'test_l2_evaluate_basins.cpp',
                      'test_fill_sinks.cpp',
                      'test_grid.cpp',
                      'test_lake_operators.cpp',
                      'test_orography_creation.cpp')
