fortran_l2_lake_model_src += files('l2_lake_model_mod.f90',
                                   'l2_calculate_lake_fractions_mod.f90',
                                   'l2_lake_model_array_decoder.f90',
                                   'l2_lake_model_interface_mod.f90',
                                   'l2_lake_model_interface_switcher_mod.f90',
                                   'l2_lake_model_input.f90',
                                   'l2_lake_model_output.f90')
