fortran_lake_model_src += files('lake_model_mod.f90',
                                'calculate_lake_fractions_mod.f90',
                                'lake_model_array_decoder.f90',
                                'lake_model_interface_mod.f90',
                                'lake_model_interface_switcher_mod.f90',
                                'lake_model_input.f90',
                                'lake_model_output.f90',
                                'lake_model_tree_mod.f90')
