fortran_src += files('latlon_hd_model_driver.f90',
                     'latlon_hd_model_interface_mod.f90',
                     'latlon_hd_model_io_mod.f90',
                     'latlon_hd_model_mod.f90',
                     'latlon_lake_logger_mod.f90',
                     'latlon_lake_model_interface_mod.f90',
                     'latlon_lake_model_interface_switcher_mod.f90',
                     'latlon_lake_model_io_mod.f90',
                     'latlon_lake_model_lake_number_retrieval_driver.f90',
                     'latlon_lake_model_mod.f90',
                     'latlon_lake_model_retrieve_lake_numbers.f90')
