  cython_libraries += ['compute_catchments_wrapper',
                       'create_connected_lsmask_wrapper',
                       'create_orography_wrapper',
                       'determine_river_directions_wrapper',
                       'l2_evaluate_basins_wrapper',
                       'fill_sinks_wrapper',
                       'fill_sinks_wrapper_low_mem',
                       'follow_streams_wrapper',
                       'lake_operators_wrapper',
                       'upscale_orography_wrapper',
                       'bifurcate_rivers_basic_icon_wrapper',
                       'compute_catchments_icon_wrapper',
                       'determine_river_directions_icon_wrapper',
                       'sink_filling_icon_wrapper']
